2008-10-11  Vincent Torri  <doursse at users dot sf dot net>

	* configure.ac:
	* src/lib/Makefile.am:
	readd guards suppressed in previous commit

	* src/lib/Evil.h:
	include new header files

	* src/lib/errno.h:
	* src/lib/evil_errno.c:
	add fake errno system with mingw32ce

	* src/lib/evil_fcntl.c:
	* src/lib/evil_fcntl.h:
	fix compilation on cegcc and mingw32 (mainly does
	nothing on Windows CE)

	* src/lib/evil_stdio.c:
	* src/lib/evil_stdio.h:
	add rewind and perror for mingw32ce

	* src/lib/evil_string.c:
	* src/lib/evil_string.h:
	add strerror for mingw32ce

2008-10-11  Vincent Torri  <doursse at users dot sf dot net>

	* configure.ac:
	* src/lib/Makefile.am:
	* src/lib/evil_fnmatch.c:
	* src/lib/evil_fnmatch_list_of_states.c:
	add guards instead of not including fnmatch source
	file in Makefile.am (for mingw32ce only)

	* src/bin/Makefile.am:
	* src/bin/evil_suite.c:
	* src/bin/evil_test_memcpy.c:
	* src/bin/suite.c:
	* src/bin/suite.h:
	* src/bin/test_memcpy.c:
	* src/bin/test_memcpy.h:
	rename files

2008-10-09  Vincent Torri  <doursse at users dot sf dot net>

	* AUTHORS:
	mention Tor's contribution

	* configure.ac:
	mention m4 directory, check errno header file,
	add conditionnal when mingw32ce is used, minor
	formatting

	* m4/efl_doxygen.m4:
	fix comments

	* src/lib/Makefile.am:
	include fnmatch files only when mingw32ce is used

	* src/lib/evil_fcntl.c:
	define correctly _get_osfhandle on mingw32ce

	* src/lib/evil_pwd.c:
	fix getpwuid() when cegcc or mingw32ce are used

	* src/lib/evil_stdlib.c:
	fix mkstemp() on all Windows platform, guard errno stuff

	* src/lib/evil_stdlib.h:
	template -> __template because 'template' is a c++ keyword.

	* src/lib/evil_unistd.c:
	guard errno stuff

	* src/lib/evil_fnmatch.c:
	* src/lib/evil_fnmatch_list_of_states.c:
	* src/lib/evil_fnmatch_private.h:
	* src/lib/fnmatch.h:
	added files

	* win32/common/fnmatch.c:
	* win32/common/fnmatch.h:
	* win32/common/fnmatch_list_of_states.c: